--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "api/index.go",
-        "use": "@vercel/go"
+        "use": "@vercel/go",
+        "config": {
+          "outputDir": "api"
+        }
       }
     ],
     "routes": [
