--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/index.go",
-        "use": "@vercel/go",
-        "config": {
-          "outputDir": "api"
-        }
+        "src": "main.go",
+        "use": "@vercel/go"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "api/index.go"
+        "dest": "main.go"
       }
     ]
   }
